--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+2016-01-XX:   1.1.1:
+--------------------
+  * look for MKL in sys.prefix/Library on Windows
+
+
 2015-10-02:   1.1.0:
 --------------------
   * The mem_stat function only returned the number of bytes allocated and
