--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+2016-01-30:   1.1.2:
+--------------------
+  * release unnder 3-clause BSD license
+
+
 2016-01-11:   1.1.1:
 --------------------
   * look for MKL in sys.prefix/Library on Windows
